mobile spacing css fix

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,4 @@
 .about {
-  padding: 10px;
   width: 100%;
 }
 
