--- a/src/components/Reports/Reports.css
+++ b/src/components/Reports/Reports.css
@@ -1,4 +1,4 @@
-.desktop .reports {
+.reports {
   width: 100%;
 }
 
